Put boxes into website
Checking formatting

--- a/boxes.html
+++ b/boxes.html
@@ -15,6 +15,22 @@
 </head>
 
 <body>
+
+    <nav class="nav">
+        <a class="logo" href="/index.html">
+            <h1>Andy Blatt</h1>
+            <h2>Stage Manager</h2>
+        </a>
+        <ul class="nav-list">
+            <!--<li><a class="navigate" href="/contact.html">Contact</a></li>-->
+            <li><a class="navigate" href="/boxes.html">Boxes</a></li>
+            <li><a class="navigate" href="/resume.html">Resume</a></li>
+            <li><a class="navigate" href="/projects.html">Projects</a></li>
+            <li><a class="navigate" href="/productions.html">Productions</a></li>
+            <li><a class="navigate" href="/index.html">Home</a></li>
+        </ul>
+    </nav>
+
     <section>
         <!--<div class="grid-total">
             <div class="grid-packet">
