--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
         </a>
         <ul class="nav-list">
             <!--<li><a class="navigate" href="/contact.html">Contact</a></li>-->
+            <li><a class="navigate" href="/boxes.html">Boxes</a></li>
             <li><a class="navigate" href="/resume.html">Resume</a></li>
             <li><a class="navigate" href="/projects.html">Projects</a></li>
             <li><a class="navigate" href="/productions.html">Productions</a></li>
