Fix Museum Inspo photos?

--- a/projects.html
+++ b/projects.html
@@ -80,15 +80,15 @@
             
                 <div class="side-by-side">
                     <div class="container2">
-                        <img src="images/costumes/mi-research.jpg" class="grid-img">
+                        <img src="images/costumes/mi-research.jpg" class="image2">
                         <div class="overlay2">Research Imagery</div>
                     </div>
                     <div class="container2">
-                        <img src="images/costumes/mi-final.jpg" class="grid-img">
+                        <img src="images/costumes/mi-final.jpg" class="image2">
                         <div class="overlay2">Final Rendering</div>
                     </div>
                     <div class="container2">
-                        <img src="images/costumes/mi-thumbnails.jpg" class="grid-img">
+                        <img src="images/costumes/mi-thumbnails.jpg" class="image2">
                         <div class="overlay2">Thumbnail Sketches</div>
                     </div>
                 </div>
