--- a/projects.html
+++ b/projects.html
@@ -197,11 +197,10 @@
 
         <div>
             <h3>Lanscape Sample</h3>
-
             <div class="side-by-side">
-                <img src="images/scenic-paint/landscape1.jpg" class="small-pic" />
-                <img src="images/scenic-paint/landscape2.jpg" class="small-pic" />
-                <img src="images/scenic-paint/landscape3.jpg" class="small-pic" />
+                <img src="images/scenic-paint/landscape1.jpg" class="image2" />
+                <img src="images/scenic-paint/landscape2.jpg" class="image2" />
+                <img src="images/scenic-paint/landscape3.jpg" class="image2" />
             </div>
         </div> <!-- End of Landscape Sample div -->
     </section>
