Adding in Props and Intro to Design if wanted
Commented out for now

--- a/projects.html
+++ b/projects.html
@@ -153,7 +153,7 @@
 
             <div class="all-pics">
                <img src="images/scenic-paint/final-paint5.jpg" class="big-pic">
-            </div>-
+            </div>
             <div class="side-by-side">
                 <img src="images/scenic-paint/final-paint1.jpg" class="small-pic hori" />
                 <img src="images/scenic-paint/final-paint2.jpg" class="small-pic hori" />
@@ -203,6 +203,59 @@
                 <img src="images/scenic-paint/landscape3.jpg" class="image2" />
             </div>
         </div> <!-- End of Landscape Sample div -->
+
+        <!--<h2 class="headliner">Props</h2>
+
+        <div>
+            <h3>Bottles</h3>
+            <p>Insert info here about the bottles because they're cool but you need to explain them</p>
+            <div class="all-pics">
+                <div class="pic-box">
+                    <img src="images/props/bottles4.jpg" class="big-pic">
+                </div>
+                <div class="pic-box">
+                    <img src="images/props/bottles1.jpg" class="small-pic">
+                    <img src="images/props/bottles2.jpg" class="small-pic">
+                    <img src="images/props/bottles3.jpg" class="horizontal-small-pic">
+                </div>
+            </div>
+        </div>  End of Bottles div 
+        <div>
+            <h3>Cleavers</h3>
+    
+            <p>Insert info here about the bottles because they're cool but you need to explain them</p>
+
+            <div class="all-pics">
+                <img src="images/props/cleaver4.jpg" class="big-pic">
+            </div>
+            <div class="side-by-side">
+                <img src="images/props/cleaver1.jpg" class="horizontal-small-pic flipped">
+                <img src="images/props/cleaver2.jpg" class="horizontal-small-pic flipped">
+                <img src="images/props/cleaver3.jpg" class="horizontal-small-pic">
+            </div> 
+        </div>  End of Cleavers div -->
+
+        <!--
+        <h2 class="headliner">Intro to Design</h2>
+        
+        <div>
+            <h3>Shapes Project</h3>
+            <p>Had to make three-dimensional shapes into new objects all centering around a theme. 
+                I piced Noah Kahan's album Stick Season for my inspiration.</p>
+
+                <div class="all-pics">
+                    <img src="images/intro-design/shapes5.jpg" class="big-pic">
+                 </div>
+                 <div class="side-by-side">
+                     <img src="images/intro-design/shapes1.jpg" class="small-pic hori" />
+                     <img src="images/intro-design/shapes2.jpg" class="small-pic hori" />
+                     <img src="images/intro-design/shapes3.jpg" class="small-pic hori" />
+                     <img src="images/intro-design/shapes4.jpg" class="small-pic hori" />
+                 </div>
+        </div>-->
+
+
+
     </section>
 
     <footer>
