--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,13 @@
     <title>Andy Blatt Projects</title>
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="styles.css" />
+    <!-- SEO STUFF -->
+    <meta content="andyblatt.com" property="og:title" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.andyblatt.com" />
+    <meta content="images/andyBlattHeadshot.jpg" property="og:image" />
+    <meta name="description" content="Andy Blatt stage management and design portfolio" />
+    <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
