--- a/projects.html
+++ b/projects.html
@@ -203,7 +203,7 @@
         </div> <!-- End of Brick, Wood, Stone div-->
 
         <div>
-            <h3>Lanscape Sample</h3>
+            <h3>Landscape Sample</h3>
             <div class="side-by-side">
                 <img src="images/scenic-paint/landscape1.jpg" class="image2" />
                 <img src="images/scenic-paint/landscape2.jpg" class="image2" />
