Center pfp in mobile view

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <section>
         <div class="andy-container">
-            <div>
-                <img id="pfp" src="images/andyBlattHeadshot.jpg" />
+            <div class="side-by-side pfp">
+                <img class="pfp" src="images/andyBlattHeadshot.jpg" />
             </div>
             <div id="bio">
                 <h2>Meet Andy!</h2>
