Add meta keywords

--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Andy Blatt website" />
-    <title>Andy Blatt Projects</title>
+    <meta name="description" content="Andy Blatt stage management and design portfolio" />
+    <title>Andy Blatt Website and Portfolio</title>
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="styles.css" />
     <!-- SEO STUFF -->
@@ -13,7 +13,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.andyblatt.com" />
     <meta content="images/andyBlattHeadshot.jpg" property="og:image" />
-    <meta name="description" content="Andy Blatt stage management and design portfolio" />
+    <meta property="keyword" content="Andy Blatt, Theater, Andy Blatt Theater, Andy Blatt Theatre, 
+        Andy Blatt UMich, Andy Blatt Website, Andy Blatt Stage Manager, Andy Blatt Portfolio" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
