--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,8 @@
     <meta property="og:url" content="https://www.andyblatt.com" />
     <meta content="images/andyBlattHeadshot.jpg" property="og:image" />
     <meta name="description" content="Andy Blatt stage management and design portfolio" />
+    <meta property="keyword" content="Andy Blatt, Theater, Andy Blatt Theater, Andy Blatt Theatre, 
+        Andy Blatt UMich, Andy Blatt Website, Andy Blatt Stage Manager, Andy Blatt Portfolio" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
