Update page titles

--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Andy Blatt website" />
-    <title>Andy Blatt Contact Form</title>
+    <title>Andy Blatt Resume</title>
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="styles.css" />
     <!-- SEO STUFF -->
