--- a/productions.html
+++ b/productions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Andy Blatt stage management and design portfolio" />
-    <title>Andy Blatt Website and Portfolio</title>
+    <title>Andy Blatt Productions</title>
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="stylesheet" href="styles.css" />
     <!-- SEO STUFF -->
