--- a/projects.html
+++ b/projects.html
@@ -4,22 +4,29 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Andy Blatt stage management and design portfolio" />
-    <title>Andy Blatt Projects</title>
-    <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
+    <meta name="description" content="Andy Blatt website" />
+    <title>Andy Blatt Resume</title>
     <link rel="stylesheet" href="styles.css" />
+
+    <!-- FAVICON STUFF -->
+    <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
+    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="images/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="images/favicon/site webmanifest" />
     <!-- SEO STUFF -->
     <meta content="andyblatt.com" property="og:title" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.andyblatt.com" />
     <meta content="images/andyBlattHeadshot.jpg" property="og:image" />
+    <meta name="description" content="Andy Blatt stage management and design portfolio" />
     <meta property="keyword" content="Andy Blatt, Theater, Andy Blatt Theater, Andy Blatt Theatre, 
         Andy Blatt UMich, Andy Blatt Website, Andy Blatt Stage Manager, Andy Blatt Portfolio" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
