--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Andy Blatt Resume</title>
     <link rel="stylesheet" href="styles.css" />
 
+    <!-- Open Graph / Facebook -->
+
+
+<!-- X (Twitter) -->
+
+
     <!-- FAVICON STUFF -->
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
     <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
@@ -16,13 +22,19 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="images/favicon/site webmanifest" />
     <!-- SEO STUFF -->
-    <meta content="andyblatt.com" property="og:title" />
+    <meta property="og:title" content="Andy Blatt - Stage Manager" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.andyblatt.com" />
-    <meta content="images/andyBlattHeadshot.jpg" property="og:image" />
-    <meta name="description" content="Andy Blatt stage management and design portfolio" />
+    <meta property="og:image" href="images/andyBlattMediaCard"  />
+    <meta prooerty="og:description" content="Andy Blatt stage management and design portfolio" />
     <meta property="keyword" content="Andy Blatt, Theater, Andy Blatt Theater, Andy Blatt Theatre, 
         Andy Blatt UMich, Andy Blatt Website, Andy Blatt Stage Manager, Andy Blatt Portfolio" />
+    
+    <!--<meta property="twitter:card" content="summary_large_image" />-->
+    <meta property="twitter:url" content="https://www.andyblatt.com" />
+    <meta property="twitter:title" content="Andy Blatt - Stage Manager" />
+    <meta property="twitter:description" content="Andy Blatt stage management and design portfolio" />
+    <meta property="twitter:image" href="images/andyBlattMediaCard" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
