--- a/index.html
+++ b/index.html
@@ -4,37 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Andy Blatt website" />
-    <title>Andy Blatt Resume</title>
+    <meta name="description" content="Andy Blatt Website and Portfolio" />
+    <title>Andy Blatt - Stage Manager</title>
     <link rel="stylesheet" href="styles.css" />
-
-    <!-- Open Graph / Facebook -->
-
-
-<!-- X (Twitter) -->
-
-
     <!-- FAVICON STUFF -->
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
-    <link rel="icon" type="image/png" href="images/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="images/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="images/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="images/favicon/site webmanifest" />
     <!-- SEO STUFF -->
     <meta property="og:title" content="Andy Blatt - Stage Manager" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.andyblatt.com" />
-    <meta property="og:image" href="images/andyBlattMediaCard"  />
     <meta prooerty="og:description" content="Andy Blatt stage management and design portfolio" />
     <meta property="keyword" content="Andy Blatt, Theater, Andy Blatt Theater, Andy Blatt Theatre, 
         Andy Blatt UMich, Andy Blatt Website, Andy Blatt Stage Manager, Andy Blatt Portfolio" />
-    
     <!--<meta property="twitter:card" content="summary_large_image" />-->
     <meta property="twitter:url" content="https://www.andyblatt.com" />
     <meta property="twitter:title" content="Andy Blatt - Stage Manager" />
     <meta property="twitter:description" content="Andy Blatt stage management and design portfolio" />
-    <meta property="twitter:image" href="images/andyBlattMediaCard" />
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
