--- a/productions.html
+++ b/productions.html
@@ -34,11 +34,14 @@
         </a>
         <ul class="nav-list">
             <!--<li><a class="navigate" href="/contact.html">Contact</a></li>-->
-            <li><a class="navigate" href="/resume.html">Resume</a></li>
-            <li><a class="navigate" href="/projects.html">Projects</a></li>
-            <li><a class="navigate" href="/productions.html">Productions</a></li>
-            <li><a class="navigate" href="/index.html">Home</a></li>
-           
+            <div>
+                <li><a class="navigate" href="/productions.html">Productions</a></li>
+                <li><a class="navigate" href="/index.html">Home</a></li>  
+            </div>
+            <div>
+                <li><a class="navigate" href="/resume.html">Resume</a></li>
+                <li><a class="navigate" href="/projects.html">Projects</a></li>
+            </div>
         </ul>
     </nav>
 
