--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="bio">
                 <h2>Meet Andy!</h2>
     
-                <p>Andy is a current student at the University of Michigan pursuing a BFA in Theatre: Design and Production.
+                <p>Andy is a current student at the University of Michigan pursuing a <b>BFA in Theatre: Design and Production</b>.
                     Through a combination of traditional learning and hands-on production experience, he is passionate about
                     learning all concentrations of theater including lighting, props, scenery, costuming, and sound, with a
                     primary focus in stage management.</p>
