--- a/productions.html
+++ b/productions.html
@@ -204,6 +204,50 @@
                 </div>
             </div>
         </div>
+
+        <div>
+            <div class="headliner">
+                <h2>Guys & Dolls</h2>
+                <p>Assistant Stage Manager</p>
+            </div>
+            
+
+
+            <div class="production-gallery">
+                <img src="images/guys-and-dolls/GuysDolls6.JPG" />
+                <img src="images/guys-and-dolls/GuysDolls2.JPG" />
+                <img src="images/guys-and-dolls/GuysDolls3.JPG" />
+                <img src="images/guys-and-dolls/GuysDolls1.JPG" />
+                <img src="images/guys-and-dolls/GuysDolls4.JPG" />
+                <img src="images/guys-and-dolls/GuysDolls5.JPG" />
+                
+                <!--
+            <img src="images/CaesarCompany.JPG"/>
+            <img src="images/caesar/caesar3.jpg"/>
+                -->
+            </div>
+
+            <div class="about-show">
+                <div class="creative-team">
+                    <p><span class="team-position">Director: </span>Richard Ruiz Henry</p>
+                    <p><span class="team-position">Music Director: </span>Jason DeBord</p>
+                    <p><span class="team-position">Choreographer: </span>Mara Newbery Greer</p>
+                    <p><span class="team-position">Set Designer: </span>Tim Brown</p>
+                    <p><span class="team-position">Costume Designer: </span>Taylor Pfenning</p>
+                    <p><span class="team-position">Lighting Designer: </span>Abi Farnsworth</p>
+                    <p><span class="team-position">Photographer: </span>Peter Smith</p>
+                    <p><span class="team-position">Production Stage Manager: </span>Briana Barker</p>
+                    <p><span class="team-position">Assistant Stage Managers: </span>Andy Blatt, Charlotte Stallings</p>
+                </div>
+
+                <div class="show-details">
+                    <p>Book and Lyrics by Frank Loesser, Jo Swerling, and Abe Burrows</p>
+                    <div class="empty-block"></div>
+                    <p>University Productions | Lydia Mendelssohn Theatre</p>
+                    <p>October 2023</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
