Link photos to productions

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 <div class="me-photos">
                     <div class="container22">
-                        <img src="images/homepage/G&DCompany.JPG" class="small-img" />
+                        <a href="/productions.html#dolls"><img src="images/homepage/G&DCompany.JPG" class="small-img" /></a>
                         <div class="overlay smallO">Guys & Dolls</div>
                     </div>
                     <div class="container22">
@@ -80,7 +80,7 @@
                     </div>
             
                     <div class="container22">
-                        <img src="images/homepage/CaesarCompany.JPG" class="small-img" />
+                        <a href="/productions.html#caesar"><img src="images/homepage/CaesarCompany.JPG" class="small-img" /></a>
                         <div class="overlay smallO">Julius Caesar</div>
                     </div>
                 </div> <!-- END OF ME-PHOTOS -->
