--- a/productions.html
+++ b/productions.html
@@ -51,7 +51,7 @@
 
     <section id="all-productions" class="all-productions">
         <div>
-            <div class="headliner">
+            <div class="headliner" id="caesar">
                 <h2>Julius Caesar</h2>
                 <p>Production Stage Manager</p>
             </div>
@@ -206,7 +206,7 @@
         </div>
 
         <div>
-            <div class="headliner">
+            <div class="headliner" id="dolls">
                 <h2>Guys & Dolls</h2>
                 <p>Assistant Stage Manager</p>
             </div>
