Unlink small photos

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
 
                 <div class="me-photos">
                     <div class="container22">
+                        <img src="images/homepage/G&DCompany.JPG" class="small-img" />
+                        <div class="overlay smallO">Guys & Dolls</div>
+                    </div>
+                    <div class="container22">
+                        <img src="images/homepage/SWGroup.jpg" class="small-img" />
+                        <div class="overlay smallO">"it's a small world"</div>
+                    </div>
+            
+                    <div class="container22">
+                        <img src="images/homepage/CaesarCompany.JPG" class="small-img" />
+                        <div class="overlay smallO">Julius Caesar</div>
+                    </div>
+                </div> <!-- END OF ME-PHOTOS -->
+
+                <!--<div class="me-photos">
+                    <div class="container22">
                         <a href="/productions.html#dolls"><img src="images/homepage/G&DCompany.JPG" class="small-img" /></a>
                         <div class="overlay smallO">Guys & Dolls</div>
                     </div>
@@ -83,7 +99,7 @@
                         <a href="/productions.html#caesar"><img src="images/homepage/CaesarCompany.JPG" class="small-img" /></a>
                         <div class="overlay smallO">Julius Caesar</div>
                     </div>
-                </div> <!-- END OF ME-PHOTOS -->
+                </div> END OF ME-PHOTOS -->
             </div>
         </div>
     </section>
