Underline current page

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             </div>
             <div>
                 <li><a class="navigate" href="/resume.html">Resume</a></li>
-                <li><a class="navigate" href="/projects.html">Projects</a></li>
+                <li><a class="navigate chosen" href="/projects.html">Projects</a></li>
             </div>
         </ul>
     </nav>
