--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
                 <li><a class="navigate" href="/index.html">Home</a></li>  
             </div>
             <div>
-                <li><a class="navigate" href="/resume.html">Resume</a></li>
+                <li><a class="navigate chosen" href="/resume.html">Resume</a></li>
                 <li><a class="navigate" href="/projects.html">Projects</a></li>
             </div>
       </nav>
