--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!--<li><a class="navigate" href="/contact.html">Contact</a></li>-->
             <div>
                 <li><a class="navigate" href="/productions.html">Productions</a></li>
-                <li><a class="navigate" href="/index.html">Home</a></li>  
+                <li><a class="navigate chosen" href="/index.html">Home</a></li>  
             </div>
             <div>
                 <li><a class="navigate" href="/resume.html">Resume</a></li>
