--- a/productions.html
+++ b/productions.html
@@ -35,7 +35,7 @@
         <ul class="nav-list">
             <!--<li><a class="navigate" href="/contact.html">Contact</a></li>-->
             <div>
-                <li><a class="navigate" href="/productions.html">Productions</a></li>
+                <li><a class="navigate chosen" href="/productions.html">Productions</a></li>
                 <li><a class="navigate" href="/index.html">Home</a></li>  
             </div>
             <div>
