Add visual icons to footer

--- a/resume.html
+++ b/resume.html
@@ -61,8 +61,8 @@
        <!-- <embed src="/ABResume.pdf" type="application/pdf" title="Embedded PDF Viewer" class="resume-view" />-->
     </section>
     <footer>
-        <a class="navigate" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
-        <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
+        <a class="ficon" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank"><img src="images/footer/linkedin1.png" alt="LinkedIn"></a>
+        <a class="ficon" href="mailto:andyfelix564@gmail.com" target="_blank"><img src="images/footer/email1.png" alt="Email"></a>
     </footer>
 </body>
 
