--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <!-- TODO: Put images or something at the bottom of the page to spice it up a little more when on desktop -->
 
     <footer>
-        <a class="navigate" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank">LinkedIn</a>
-        <a class="navigate" href="mailto:andyfelix564@gmail.com" target="_blank">Email</a>
+        <a class="ficon" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank"><img src="images/footer/linkedin1.png" alt="LinkedIn"></a>
+        <a class="ficon" href="mailto:andyfelix564@gmail.com" target="_blank"><img src="images/footer/email1.png" alt="Email"></a>
     </footer>
 </body>
 
