Hover images in footer

--- a/projects.html
+++ b/projects.html
@@ -274,9 +274,29 @@
 
     </section>
 
-    <footer>
+    <!--<footer>
         <a class="ficon" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank"><img src="images/footer/linkedin1.png" alt="LinkedIn"></a>
         <a class="ficon" href="mailto:andyfelix564@gmail.com" target="_blank"><img src="images/footer/email1.png" alt="Email"></a>
+    </footer>-->
+
+    <footer>
+        <div class="imageBox">
+            <div class="imageInn">
+                <a class="ficon" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank"><img src="images/footer/linkedin1.png" alt="LinkedIn"></a>
+            </div>
+            <div class="hoverImg">
+                <a class="ficon" href="https://www.linkedin.com/in/andy-blatt-4b8952263" target="_blank"><img src="images/footer/linkedin2.png" alt="LinkedIn"></a>
+            </div>
+          </div>
+
+          <div class="imageBox">
+            <div class="imageInn">
+                <a class="ficon" href="mailto:andyfelix564@gmail.com" target="_blank"><img src="images/footer/email1.png" alt="Email"></a>
+            </div>
+            <div class="hoverImg">
+                <a class="ficon" href="mailto:andyfelix564@gmail.com" target="_blank"><img src="images/footer/email2.png" alt="Email"></a>
+            </div>
+          </div>
     </footer>
 </body>
 
