--- a/productions.html
+++ b/productions.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles.css" />
     <!-- FAVICON STUFF -->
     <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
+    <link rel="icon" href="/ABfavicon.png">
+    <link rel="apple-touch-icon" href="/ABfavicon.png">
     <!-- SEO STUFF -->
     <meta property="og:title" content="Andy Blatt - Stage Manager" />
     <meta property="og:type" content="website" />
