--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,11 @@
     <meta name="description" content="Andy Blatt Website and Portfolio" />
     <title>Andy Blatt - Projects</title>
     <link rel="stylesheet" href="styles.css" />
-    <!-- FAVICON STUFF -->
-    <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
-    <!-- SEO STUFF -->
+   <!-- FAVICON STUFF -->
+   <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
+   <link rel="icon" href="/ABfavicon.png">
+   <link rel="apple-touch-icon" href="/ABfavicon.png">
+   <!-- SEO STUFF -->
     <meta property="og:title" content="Andy Blatt - Stage Manager" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.andyblatt.com" />
