Get rid of html?

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -8,9 +8,9 @@
     <title>Andy Blatt - Projects</title>
     <link rel="stylesheet" href="styles.css" />
    <!-- FAVICON STUFF -->
-   <link rel="icon" type="image/x-icon" href="/ABfavicon.png">
-   <link rel="icon" href="/ABfavicon.png">
-   <link rel="apple-touch-icon" href="/ABfavicon.png">
+   <link rel="icon" type="image/x-icon" href="./ABfavicon.png">
+   <link rel="icon" href="./ABfavicon.png">
+   <link rel="apple-touch-icon" href="./ABfavicon.png">
    <!-- SEO STUFF -->
     <meta property="og:title" content="Andy Blatt - Stage Manager" />
     <meta property="og:type" content="website" />
@@ -30,7 +30,7 @@
 
 <body>
     <nav class="nav">
-        <a class="logo" href="/index.html">
+        <a class="logo" href="./index.html">
             <h1>Andy Blatt</h1>
             <h2>Stage Manager</h2>
         </a>
@@ -42,7 +42,7 @@
             </div>
             <div>
                 <li><a class="navigate" href="/resume.html">Resume</a></li>
-                <li><a class="navigate chosen" href="/projects.html">Projects</a></li>
+                <li><a class="navigate chosen" href="/projects/">Projects</a></li>
             </div>
         </ul>
     </nav>
@@ -60,8 +60,8 @@
                 drawings and write a description similar to those on the J. Peterman website.
             </p>
 
-            <img src="images/costumes/peterman-shoe.png" class="j-peterman">
-            <img src="images/costumes/peterman-bandana.png" class="j-peterman">
+            <img src="./images/costumes/peterman-shoe.png" class="j-peterman">
+            <img src="./images/costumes/peterman-bandana.png" class="j-peterman">
         </div> <!-- End of J. Peterman div -->
 
         <div class="almost-fairy-time">
