--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div>
                 <li><a class="navigate" href="/resume.html">Resume</a></li>
-                <li><a class="navigate" href="/projects.html">Projects</a></li>
+                <li><a class="navigate" href="/projects/">Projects</a></li>
             </div>
         </ul>
     </nav>
