Link homepage photos

--- a/index.html
+++ b/index.html
@@ -71,7 +71,22 @@
                         eager to continue growing as a person and theater artist through the rest of his life.</p>
                 </div> <!-- END OF BIO DIV -->
 
-                <div class="me-photos">
+               <div class="me-photos">
+                    <a class="container22" href="/productions.html#caesar">
+                        <img src="images/homepage/G&DCompany.JPG" class="small-img" />
+                        <div class="overlay smallO">Guys & Dolls</div>
+                    </a>
+                    <a class="unlinked container22">
+                        <img src="images/homepage/SWGroup.jpg" class="small-img" />
+                        <div class="overlay smallO">"it's a small world"</div>
+                    </a>
+                    <a class="container22" href="/productions.html#dolls">
+                        <img src="images/homepage/CaesarCompany.JPG" class="small-img" />
+                        <div class="overlay smallO">Julius Caesar</div>
+                    </a>
+                </div> <!-- END OF ME-PHOTOS -->
+
+                <!-- <div class="me-photos">
                     <div class="container22">
                         <img src="images/homepage/G&DCompany.JPG" class="small-img" />
                         <div class="overlay smallO">Guys & Dolls</div>
@@ -85,23 +100,7 @@
                         <img src="images/homepage/CaesarCompany.JPG" class="small-img" />
                         <div class="overlay smallO">Julius Caesar</div>
                     </div>
-                </div> <!-- END OF ME-PHOTOS -->
-
-                <!--<div class="me-photos">
-                    <div class="container22">
-                        <a href="/productions.html#dolls"><img src="images/homepage/G&DCompany.JPG" class="small-img" /></a>
-                        <div class="overlay smallO">Guys & Dolls</div>
-                    </div>
-                    <div class="container22">
-                        <img src="images/homepage/SWGroup.jpg" class="small-img" />
-                        <div class="overlay smallO">"it's a small world"</div>
-                    </div>
-            
-                    <div class="container22">
-                        <a href="/productions.html#caesar"><img src="images/homepage/CaesarCompany.JPG" class="small-img" /></a>
-                        <div class="overlay smallO">Julius Caesar</div>
-                    </div>
-                </div> END OF ME-PHOTOS -->
+                </div>  END OF ME-PHOTOS -->
             </div>
         </div>
     </section>
