Fix homepage links

--- a/productions.html
+++ b/productions.html
@@ -52,8 +52,8 @@
 
 
     <section id="all-productions" class="all-productions">
-        <div>
-            <div class="headliner" id="caesar">
+        <div id="caesar">
+            <div class="headliner">
                 <h2>Julius Caesar</h2>
                 <p>Production Stage Manager</p>
             </div>
@@ -207,8 +207,8 @@
             </div>
         </div>
 
-        <div>
-            <div class="headliner" id="dolls">
+        <div id="dolls">
+            <div class="headliner">
                 <h2>Guys & Dolls</h2>
                 <p>Assistant Stage Manager</p>
             </div>
