Update homepage links

--- a/productions.html
+++ b/productions.html
@@ -53,7 +53,7 @@
 
     <section id="all-productions" class="all-productions">
         <div id="caesar"></div>
-        <div id="dolls">
+        <div>
             
             <div class="headliner">
                 <h2>Julius Caesar</h2>
@@ -96,7 +96,8 @@
                     <p>October 2024</p>
                 </div>
             </div>
-        </div>
+        </div> <!-- END OF CAESAR -->
+
         <div>
             <div class="headliner">
                 <h2>Of Thee I Sing</h2>
@@ -210,6 +211,7 @@
             </div>
         </div>
 
+        <div id="dolls"></div>
         <div>
             <div class="headliner">
                 <h2>Guys & Dolls</h2>
@@ -245,7 +247,7 @@
                     <p>October 2023</p>
                 </div>
             </div>
-        </div>
+        </div> <!-- END OF DOLLS -->
     </section>
 
     <!--<footer>
